# mistry-firmware

./: .gitmodules  CMakeLists.txt  README.md  lwipopts.h  upload.sh
.cache/clangd/index/: Config.h.B4346D4CA357A623.idx  ConnectionManager.h.4F6E0D5D7FB5BBF6.idx  Font.h.55E27E023AE16A58.idx  FreeRTOS.h.0667D32686437279.idx  FreeRTOSConfig.h.C1A0FD8F89757323.idx  GFX.cpp.CB630DE03AC35B0C.idx  GFX.h.9CFD292041F7A990.idx  ResourceMonitor.cpp.19CEC9D8EBCE8127.idx  SSD1306.cpp.BB472B3FB5ED4817.idx  SSD1306.h.1D285B75C17604DD.idx  Socket.cpp.8D5E0BAA3E7311B6.idx  Socket.h.F12DF70B5549B348.idx  UARTManager.cpp.8B0B6523B96FF8D6.idx  UARTManager.h.064717CAC4DED0D0.idx  UIHandler.cpp.821A56CA337FAAC7.idx  UIHandler.h.1BD1A05F0045BC9C.idx  WiFiManager.cpp.4F4B120E7C2A08CD.idx  WiFiManager.h.F98E770812288BB3.idx  croutine.c.695073AAB1AA8F1C.idx  croutine.h.1C8E38772CA11BD8.idx  deprecated_definitions.h.75C851292112736A.idx  event_groups.c.25D1F1B77176237D.idx  event_groups.h.30F57D214F93BBEE.idx  font.h.FCA57BEDAD11A72D.idx  freertos_sdk_config.h.CECE388936FDC91C.idx  heap_4.c.732AEA19FDEABBA8.idx  list.c.DDDBA4CEEF7074D2.idx  list.h.BD2BC739BAAEBC5C.idx  lwipopts.h.516D9FA7303A7203.idx  lwipopts_examples_common.h.377D2EFB7BAFCA5F.idx  main.c.723ECEE3C8C2F92B.idx  main.cpp.7146F7BAB55E8872.idx  mpu_prototypes.h.17EE63CF774D15F7.idx  mpu_syscall_numbers.h.0889DC65111FAC38.idx  mpu_wrappers.h.D5B5476090002C9F.idx  mpu_wrappers_v2_asm.c.07BF7C365513975C.idx  port.c.18EBAE82DA7E9BD5.idx  port.c.E97D39AB678806B0.idx  portable.h.33FDA1F296C1B192.idx  portasm.c.A1A5BFCBB161A589.idx  (+14 more)
include/: Config.h  FreeRTOSConfig.h  battery.h  util.h
include/connection/: ConnectionManager.h  TCPClient.h  UARTManager.h  WiFiManager.h
include/display/: Font.h  GFX.h  SSD1306.h  UIHandler.h  display.h  font.h
include/experiments/: dynamics.h  energy.h  fluid.h  gravity.h  kinematics.h  sound.h
include/experiments/dynamics/: force.h  weight.h
include/experiments/kinematics/: acceleration.h  distance.h  velocity.h
include/hx711/: hx711.h
include/keypad/: keypad.h
include/microphone/: microphone.h
include/resource/: ResourceMonitor.h
include/setting/: config.h  setting.h
src/: battery.cpp  main.c  main.cpp
src/connection/: TCPClient.cpp  UARTManager.cpp  WiFiManager.cpp
src/display/: GFX.cpp  SSD1306.cpp  UIHandler.cpp  display.cpp
src/experiments/: dynamics.cpp  energy.cpp  fluid.cpp  gravity.cpp  kinematics.cpp  sound.cpp
src/experiments/dynamics/: force.cpp  weight.cpp
src/experiments/kinematics/: acceleration.cpp  distance.cpp  velocity.cpp
src/hx711/: hx711.cpp
src/keypad/: keypad.cpp
src/microphone/: microphone.cpp
src/setting/: config.cpp  setting.cpp
